Update createExportMultipleMonthsResponseByReportVersion method to create a view if requested